<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".addEntry">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/lblStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/went_to_sleep"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_date"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:hint="@string/enter_time"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/lblEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woke_up"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_date"
                    android:lineSpacingExtra="14sp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_time"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/lblSlept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/sleep_time"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="723dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_would"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:numStars="5"
            android:stepSize=".5" />

        <EditText
            android:id="@+id/txtDream"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:ems="10"
            android:hint="@string/dream_notes"
            android:inputType="textMultiLine" />

        <Button style="@style/sdButton"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button style="@style/sdButton"
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="652dp" />

            <Button style="@style/sdButton"
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="652dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>